appId: com.anonymous.ichiro
---
- tapOn:
    id: "verification-code"
    waitToSettleTimeoutMs: 500
- inputText: "${OTP}"
- tapOn:
    text: "確認してはじめる"
    waitToSettleTimeoutMs: 500
- extendedWaitUntil:
    visible: "コミットメントを作成"
    timeout: 15000
